# ExelWorkLib

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md  install.sh
include/: ExelWorkLib_global.h  exelworklib.h
src/: exelworklib.cpp
